phase2_Dev/src/objects/Transaction_Process_Step__c.object
<CustomObject>
    <fields>
        <fullName>Associated_Transaction_Field__c</fullName>
        <inlineHelpText>Contain the API name of the field to be updated (ex: &quot;Missing_to_move_to_Under_Review__c&quot;...)</inlineHelpText>
        <label>Associated Transaction Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LEAD_Configuration__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Per Transaction Type</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LEAD_Configuration__c</referenceTo>
        <relationshipLabel>Transaction Process Steps</relationshipLabel>
        <relationshipName>Transaction_Process_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Missing to move to Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Elements For Licensor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Elements For Finalizing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Approval</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Transaction Process Step</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Associated_Transaction_Field__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transaction Process Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Process Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>